--- a/styles/globals.css
+++ b/styles/globals.css
@@ -114,3 +114,12 @@ input:checked + .slider:before {
   border-color: white;
   color: white;
 }
+
+.sheet {
+  height: 100%;
+  z-index: 100;
+  position: fixed;
+  height: calc(100vh + 100px);
+  width: 100%;
+  touch-action: none;
+}
