--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,58 +68,229 @@ input:checked + .slider:before {
   transform: translateX(20px);
 }
 
+.sheet {
+  height: 100%;
+  z-index: 100;
+  position: fixed;
+  height: calc(100vh + 180px);
+  width: 100%;
+  touch-action: none;
+}
+
+.embla {
+  position: relative;
+  /* background-color: #f7f7f7; */
+  /* padding: 20px; */
+  /* max-width: 670px; */
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.embla__viewport {
+  overflow: hidden;
+  width: 100%;
+}
+
+.embla__viewport.is-draggable {
+  cursor: move;
+  cursor: grab;
+}
+
+.embla__viewport.is-dragging {
+  cursor: grabbing;
+}
+
+.embla__container {
+  display: flex;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  margin-left: -10px;
+}
+
+.embla__slide {
+  position: relative;
+  min-width: 100%;
+  padding-left: 10px;
+}
+
+.embla__slide__inner {
+  position: relative;
+  overflow: hidden;
+  /* height: 190px; */
+}
+
+.embla__slide__img {
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  min-height: 100%;
+  min-width: 100%;
+  max-width: none;
+  transform: translate(-50%, -50%);
+}
+
+.embla__button {
+  outline: 0;
+  cursor: pointer;
+  background-color: transparent;
+  touch-action: manipulation;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  transform: translateY(-50%);
+  border: 0;
+  width: 30px;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+  fill: #1bcacd;
+  padding: 0;
+}
+
+.embla__button:disabled {
+  cursor: default;
+  opacity: 0.3;
+}
+
+.embla__button__svg {
+  width: 100%;
+  height: 100%;
+}
+
+.embla__button--prev {
+  left: 27px;
+}
+
+.embla__button--next {
+  right: 27px;
+}
+
+.embla__dot {
+  cursor: pointer;
+  position: relative;
+  padding: 0;
+  outline: 0;
+  border-radius: 20;
+  width: 100%;
+  height: 8px;
+  display: flex;
+  align-items: center;
+}
+
+.embla__dot:after {
+  background-color: #efefef;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  content: "";
+}
+
+.embla__dot.is-selected:after {
+  background-color: #00ffc8;
+  opacity: 1;
+}
+
+/* SWITCH TOGGLE */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 30px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 22px;
+  width: 22px;
+  left: 5px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #16e093;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
 /* Rounded sliders */
 .slider.round {
-  border-radius: 20px;
+  border-radius: 34px;
 }
 
 .slider.round:before {
   border-radius: 50%;
 }
 
-.fadeOut {
-  opacity: 0;
-  width: 0;
-  height: 0;
-  transition: width 0.5s 0.5s, height 0.5s 0.5s, opacity 0.5s;
-}
-.fadeIn {
-  opacity: 1;
-  width: 100%;
-  height: 208px;
-  transition: opacity 0.5s 0.5s;
-}
-.fadeIn1 {
-  opacity: 1;
-  width: 100%;
-  height: 56px;
-  transition: opacity 0.5s 0.5s;
-}
-.swiper-paginate .swiper-pagination-bullet {
-  width: 50%;
-  border-radius: 0px;
-  border-bottom-width: 2px;
-  height: 40px;
-  background-color: transparent;
-  color: black;
-  opacity: 1;
-  border-color: gray;
-  margin: 0px !important;
-}
-.swiper-paginate .swiper-pagination-bullet-active {
-  width: 50%;
-  border-radius: 0px;
-  height: 40px;
-  border-bottom-width: 2px;
-  border-color: white;
-  color: white;
+/*  */
+
+.embla__dots1 {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  /* padding-top: 10px; */
 }
 
-.sheet {
-  height: 100%;
-  z-index: 100;
-  position: fixed;
-  height: calc(100vh + 100px);
+.embla__dot1 {
+  background-color: transparent;
+  cursor: pointer;
+  position: relative;
+  padding: 0;
+  outline: 0;
+  border: 0;
+  width: 15px;
+  height: 15px;
+  margin-right: 5px;
+  margin-left: 5px;
+  display: flex;
+  align-items: center;
+}
+
+.embla__dot1:after {
+  background-color: #efefef;
   width: 100%;
-  touch-action: none;
+  height: 10px;
+  border-radius: 200px;
+  content: "";
+}
+
+.embla__dot1.is-selected:after {
+  transition-duration: 1000ms;
+  background-color: #3390fa;
+  height: 15px;
+  /* width: 20px; */
+  opacity: 1;
 }
