--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,9 +79,7 @@ input:checked + .slider:before {
 
 .embla {
   position: relative;
-  /* background-color: #f7f7f7; */
-  /* padding: 20px; */
-  /* max-width: 670px; */
+
   margin-left: auto;
   margin-right: auto;
 }
@@ -118,7 +116,6 @@ input:checked + .slider:before {
 .embla__slide__inner {
   position: relative;
   overflow: hidden;
-  /* height: 190px; */
 }
 
 .embla__slide__img {
@@ -198,8 +195,8 @@ input:checked + .slider:before {
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
-  height: 30px;
+  width: 55px;
+  height: 22px;
 }
 
 .switch input {
@@ -223,8 +220,8 @@ input:checked + .slider:before {
 .slider:before {
   position: absolute;
   content: "";
-  height: 22px;
-  width: 22px;
+  height: 14px;
+  width: 14px;
   left: 5px;
   bottom: 4px;
   background-color: white;
@@ -241,9 +238,9 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+  -webkit-transform: translateX(30px);
+  -ms-transform: translateX(30px);
+  transform: translateX(30px);
 }
 
 /* Rounded sliders */
@@ -255,7 +252,7 @@ input:checked + .slider:before {
   border-radius: 50%;
 }
 
-/*  */
+/* BANTUAN */
 
 .embla__dots1 {
   display: flex;
@@ -293,4 +290,50 @@ input:checked + .slider:before {
   height: 15px;
   /* width: 20px; */
   opacity: 1;
+}
+
+/* THIRD PAGINATION */
+
+.embla__dots3 {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  width: 20px;
+  height: 20px;
+  gap: 5px;
+}
+
+.embla__dot3 {
+  background-color: transparent;
+  cursor: pointer;
+  position: relative;
+  padding: 0;
+  outline: 0;
+  border: 0;
+  width: 15px;
+  height: 15px;
+  margin-right: 5px;
+  margin-left: 5px;
+  display: flex;
+  align-items: center;
+}
+
+.embla__dot3:after {
+  background-color: #efefef;
+  width: 10px;
+  height: 10px;
+  border-radius: 200px;
+  content: "";
+}
+
+.embla__dot3.is-selected:after {
+  transition-duration: 1000ms;
+  background-color: #3390fa;
+  height: 15px;
+  width: 20px;
+  opacity: 1;
+}
+
+mask {
+  mask-type: alpha;
 }
